--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -66,7 +66,7 @@
             Download</button>
         </div>
         <div class="col-lg-6">
-          <img src="images/iphone6.png" class="dog-img" alt="iphone-mockup">
+          <img src="iphone6.png" class="dog-img" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -111,12 +111,12 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img src="images/dog-img.jpg" class="dog" alt="dog-profile">
+          <img src="dog-img.jpg" class="dog" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
           <h2>I'll be always grateful to TinDon for Tuffy. We Now share everything. Thanks for making me complete</h2>
-          <img src="images/dog.jpg" class="dog" alt="dog-profile">
+          <img src="dog.jpg" class="dog" alt="dog-profile">
           <em>Central Park, New York</em>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -143,10 +143,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="logo" src="images/techcrunch.png" alt="tc-logo">
-    <img class="logo" src="images/tnw.png" alt="tnw-logo">
-    <img class="logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="logo" src="images/mashable.png" alt="mashable-logo">
+    <img class="logo" src="techcrunch.png" alt="tc-logo">
+    <img class="logo" src="tnw.png" alt="tnw-logo">
+    <img class="logo" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="logo" src="mashable.png" alt="mashable-logo">
 
   </section>
 
